# SimplePlayerWithFFmpeg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt  WINDOW_README.txt  audio_player.cc  audio_player.h  build.sh  demuxer.cc  demuxer.h  init.sh  multimedia_player.cc  multimedia_player.h  screen_capture.cc  screen_capture.h  timer.cc  timer.h  tutorial02.cc  tutorial02.h  tutorial03.cc  tutorial03.h  tutorial05.c  video_player.cc  video_player.h  video_player_backup.cc  visual_studio_build.bat  visual_studio_build.sh  xcode_build.sh
conan/: conanfile.txt  install_conan.sh
converter/: audio_converter.cc  audio_converter.h  audio_struct.h  converter_test.cc  conveter_test.cc  video_converter.cc  video_converter.h
decoder/: decoder.cc  decoder.h  decoder_test.cc
demuxer/: demuxer.cc  demuxer.h  demuxer_test.cc
hooks/: pre-commit
player/: player.cc  player_backup.cc  safe_queue.h
renderer/: audio_renderer.cc  audio_renderer.h  renderer_test.cc  video_renderer.cc  video_renderer.h
timer/: timer.cc  timer.h
tutorial01/: demuxer.cc  screen_capture.cc  screen_capture.h
tutorial02/: tutorial02.h
tutorial03/: tutorial03.cc  tutorial03.h
